Fix shake alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ div#footer-wrapper p {
  div#app{
    background-color: white;
    margin: 0 auto;
+   display: block;
    width: 360px;
    height: auto;
    text-align: center;
@@ -113,7 +114,7 @@ div#submit {
   font-weight: bold;
 }
 
-.shoe-box {
+div#shoe-box {
   display: block;
   margin: 0 auto;
 }
